# OOP_Lab1_2026

./: CMakeLists.txt  README.md
3DView/: CelestialObject3DModel.h  PlanetarySystemModel.cpp  PlanetarySystemModel.h  galaxyview3d.cpp  galaxyview3d.h
Algorithms/: BFSList.h  BFSMatrix.h  DFSList.h  DFSMatrix.h  DijkstraList.h  DijkstraMatrix.h  DijkstraPathList.h  GraphAlgorithms.h  IsConnectedList.h  IsConnectedMatrix.h
Algorithms/PhysicsAlgorithms/: BlackHoleGravityField.h  CelestialBodyToRigidWrapper.h  GalaxyPhysicsController.h  PhysicsEngine.h
Entities/: Galaxy.h  GalaxyFactory.cpp  GalaxyFactory.h  Planet.cpp  Planet.h  Star.cpp
GalaxyView/: AddNebulaDialog.cpp  AddStarSystemDialog.cpp  EditPlanetDialog.cpp  EditPlanetDialog.h  EditStarSystemDialog.cpp  galaxyview.cpp  galaxyview.h
GoogleTests/: BFSListTests.cpp  BFSMatrixTests.cpp  DFSListTests.cpp  DFSMatrixTests.cpp  DijkstraListTests.cpp  DijkstraMatrixTests.cpp  GalaxyGenerationTests.cpp  TestFixtures.h
Graph/: GraphWidget.cpp  GraphWidget.h
MainWindow/: windowinterface.h
docs/: Glossary.md  RefactoringAnalysis.md
docs/html/: _add_nebula_dialog_8h.html  _add_nebula_dialog_8h.js  _add_nebula_dialog_8h_source.html  _add_star_system_dialog_8h.html  _add_star_system_dialog_8h.js  _add_star_system_dialog_8h_source.html  _algorithm_8h.html  _algorithm_8h.js  _algorithm_8h_source.html  _all_tests__autogen_2moc__predefs_8h_source.html  _b_f_s_list_8h.html  _b_f_s_list_8h.js  _b_f_s_list_8h_source.html  _b_f_s_list_tests__autogen_2moc__predefs_8h_source.html  _b_f_s_matrix_8h.html  _b_f_s_matrix_8h.js  _b_f_s_matrix_8h_source.html  _b_f_s_matrix_tests__autogen_2moc__predefs_8h_source.html  _basic_usage_8cpp-example.html  _basic_usage_example_8cpp-example.html  _basic_usage_example_8cpp.html  _basic_usage_example_8cpp.js  _c_1_0c_users_0c_prj_0c_project1_0cexamples_0c_basic_usage_8cpp-example.html  _c_1_2_users_2_prj_2_project1_2_algorithms_2_algorithm_8h-example.html  _c_1_2_users_2_prj_2_project1_2_entities_2_galaxy_8h-example.html  _celestial_object_8h.html  _celestial_object_8h.js  _celestial_object_8h_source.html  _d_f_s_list_8h.html  _d_f_s_list_8h.js  _d_f_s_list_8h_source.html  _d_f_s_list_tests__autogen_2moc__predefs_8h_source.html  _d_f_s_matrix_8h.html  _d_f_s_matrix_8h.js  _d_f_s_matrix_8h_source.html  _d_f_s_matrix_tests__autogen_2moc__predefs_8h_source.html  _dijkstra_list_8h.html  _dijkstra_list_8h.js  _dijkstra_list_8h_source.html  _dijkstra_list_tests__autogen_2moc__predefs_8h_source.html  (+1902 more)
docs/latex/: _add_nebula_dialog_8h.tex  _add_nebula_dialog_8h_source.tex  _edge_8h.tex  (+1077 more)
examples/: BasicUsageExample.cpp  PerformanceBenchmark.cpp
(+139 files in other folders)
